log
Wed, Apr 30, 2025  9:15:10 AM: 
 tests:  1|8
total_score: 0/70
5729e4d
Wed, Apr 30, 2025  9:35:25 AM: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
test.c: In function 'createTreeMap':
treemap.c:41:15: error: 'new' is used uninitialized in this function [-Werror=uninitialized]
     new->root = (TreeNode *) malloc(sizeof(TreeNode));
     ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
e1aa18b
Wed, Apr 30, 2025  9:36:06 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
7487f6a
Wed, Apr 30, 2025  9:36:27 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
c4c422b
Wed, Apr 30, 2025  9:36:56 AM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:5: error: expected ';' before 'new'
     new->current = NULL
     ^~~
f57b483
Wed, Apr 30, 2025  9:37:11 AM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dc36f56
Wed, Apr 30, 2025  9:37:33 AM: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  4|7
total_score: 5/70
6840381
Wed, Apr 30, 2025  9:47:41 AM: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:74:33: error: comparison of distinct pointer types lacks a cast [-Werror]
         if (tree->current->left <key) tree->current=tree->current->right;
                                 ^
treemap.c:75:39: error: comparison of distinct pointer types lacks a cast [-Werror]
         else if (tree->current->right <key) tree->current=tree->current->left;
                                       ^
cc1.exe: all warnings being treated as errors
f1ca9b1
Wed, Apr 30, 2025  9:48:10 AM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:71:41: error: dereferencing 'void *' pointer [-Werror]
         if (tree->current->pair->key == *key) return tree->current->pair;
                                         ^~~~
treemap.c:71:41: error: void value not ignored as it ought to be
treemap.c:72:51: error: dereferencing 'void *' pointer [-Werror]
         else if(tree->current->left->pair->key == *key) return tree->current->left->pair;
                                                   ^~~~
treemap.c:72:51: error: void value not ignored as it ought to be
treemap.c:73:52: error: dereferencing 'void *' pointer [-Werror]
         else if(tree->current->right->pair->key == *key) return tree->current->right->pair;
                                                    ^~~~
treemap.c:73:52: error: void value not ignored as it ought to be
treemap.c:74:34: error: dereferencing 'void *' pointer [-Werror]
         if (tree->current->left <*key) tree->current=tree->current->right;
                                  ^~~~
treemap.c:74:34: error: void value not ignored as it ought to be
treemap.c:75:40: error: dereferencing 'void *' pointer [-Werror]
         else if (tree->current->right <*key) tree->current=tree->current->left;
                                        ^~~~
treemap.c:75:40: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
7713b74
Wed, Apr 30, 2025  9:48:34 AM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:74:33: error: comparison of distinct pointer types lacks a cast [-Werror]
         if (tree->current->left <key) tree->current=tree->current->right;
                                 ^
treemap.c:75:39: error: comparison of distinct pointer types lacks a cast [-Werror]
         else if (tree->current->right <key) tree->current=tree->current->left;
                                       ^
cc1.exe: all warnings being treated as errors
3115844
Wed, Apr 30, 2025  9:49:41 AM: 
 treemap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
4bd496a
